# WebGPU-Triangle

./: .gitignore  Build HTML.bat  CMakeLists.txt  HTTPS.bat  Install Dependencies.bat  README.md  cert.pem  key.pem
src/: WebGPU_Util.h  main.cpp
